--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">Chamber</a></li>
-                <li><a href="https://github.com/Delpipi">Github Profile</a></li>
-                <li><a href="https://www.linkedin.com/in/alexandre-paul-kouame-b700a810b/">LinkedIn</a></li>
+                <li><a href="https://github.com/Delpipi" target="_blank">Github Profile</a></li>
+                <li><a href="https://www.linkedin.com/in/alexandre-paul-kouame-b700a810b/" target="_blank">LinkedIn</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -39,7 +40,7 @@
         <div class="block1">
 
             <div class="card">
-                <div class="card-title">
+                <div class="card-header">
                     <h2>Course work</h2>
                 </div>
                 <div class="card-body">
@@ -53,7 +54,7 @@
             </div>
 
             <div class="card">
-                <div class="card-title">
+                <div class="card-header">
                     <h2>Abidjan, Cote d'Ivoire</h2>
                 </div>
                 <div class="card-body">
@@ -65,19 +66,21 @@
 
         <div class="block2">
 
-            <div class="card">
-                <div class="card-title">
+            <div id="certicateList"></div>
+
+            <!-- <div class="card">
+                <div class="card-header">
                     <h2>Web and Computer Programming Certicate</h2>
                 </div>
                 <div class="card-body">
-                    <div class="subjects">
+                    <div class="subject-nav">
                         <button type="button" class="btn btn-subject">ALL</button>
                         <button type="button" class="btn btn-subject">CSE</button>
                         <button type="button" class="btn btn-subject">WDD</button>
                     </div>
-                    <div class="subjects-list">
-                        <div class="courses">
-                            <div class="courses-header">
+                    <div class="subject-courses">
+                        <div class="course">
+                            <div class="course-header">
                                 <button type="button" class="btn btn-course">CSE 110</button>
                             </div>
                             <div class="course-description">
@@ -97,37 +100,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="courses">
-                            <div class="courses-header">
-                                <button>WDD 110</button>
-                            </div>
-                            <div class="course-description">
-                                <h3>Web Fundamentals</h3>
-                                <p class="credit">Credit: <span>2</span></p>
-                                <p class="desc">
-                                    This course introduces students to
-                                    the World Wide Web and to careers
-                                    in web site design and development.
-                                    The course is hands on with students
-                                    actually participating in simple web
-                                    designs and programming.
-                                    It is anticipated that students who
-                                    complete this course will understand
-                                    the fields of web design and development
-                                    and will have a good idea if they want to
-                                    pursue this degree as a major.
-                                </p>
-                                <div class="tech">
-                                    <ul>
-                                        <li>HTML</li>
-                                        <li>CSS</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
