update home page by adding section in main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kouame Alexandre Paul - Home</title>
+    <title>Home</title>
     <meta name="description" content="Home page">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +39,7 @@
 
         <p>Home</p>
 
-        <div class="block1">
+        <section class="block1">
 
             <div class="card">
                 <div class="card-header">
@@ -64,9 +64,9 @@
                 </div>
             </div>
 
-        </div>
+        </section>
 
-        <div class="block2">
+        <section class="block2">
 
             <div id="certicateList"></div>
 
@@ -106,7 +106,7 @@
                 </div>
             </div> -->
 
-        </div>
+        </section>
 
     </main>
     <footer>
