update home page by adding at least one section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="top-header">
             <img src="images/profile.webp" alt="Profile picture">
-            <h1>Kouame Alexandre Paul</h1>
+            <span>Kouame Alexandre Paul</span>
         </div>
         <a href="#" id="menu"></a>
         <nav>
@@ -37,11 +37,11 @@
 
     <main>
 
-        <p>Home</p>
+        <h1>Home</h1>
 
-        <section class="block1">
+        <div class="block1">
 
-            <div class="card">
+            <section class="card">
                 <div class="card-header">
                     <h2>Course work</h2>
                 </div>
@@ -53,22 +53,22 @@
                         <li>Learn and apply new technology and techniques in future programming.</li>
                     </ul>
                 </div>
-            </div>
+            </section>
 
-            <div class="card">
+            <section class="card">
                 <div class="card-header">
                     <h2>Abidjan, Cote d'Ivoire</h2>
                 </div>
                 <div class="card-body">
                     <img src="images/Coat_of_Arms_of_the_Ivory_Coast.webp" alt="Coat of Arms of the Ivory Coast">
                 </div>
-            </div>
+            </section>
 
-        </section>
+        </div>
 
-        <section class="block2">
+        <div class="block2">
 
-            <div id="certicateList"></div>
+            <section id="certicateList"></section>
 
             <!-- <div class="card">
                 <div class="card-header">
@@ -106,7 +106,7 @@
                 </div>
             </div> -->
 
-        </section>
+        </div>
 
     </main>
     <footer>
