--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
         <div class="block2">
 
-            <section id="certicateList"></section>
+            <div id="certicateList"></div>
 
-            <!-- <div class="card">
+            <!-- <section class="card">
                 <div class="card-header">
                     <h2>Web and Computer Programming Certicate</h2>
                 </div>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </section> -->
 
         </div>
 
