week02 added open graph tag inside home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home - Kouame Alexandre Paul</title>
-    <meta name="description" content="Personal page portfolio">
+    <title>Homepage - Kouame Alexandre Paul</title>
+    <meta name="description" content="Welcome to Alexandre's personal website! Discover my work, passions, 
+    and creative projects. Get to know more about my journey, skills, and how I can help bring your ideas to life.">
     <meta name="author" content="Kouame Alexandre Paul">
+    <meta property="og:title" content="Homepage - Kouame Alexandre Paul">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://delpipi.github.io/wdd231/images/abidjan-town.webp">
+    <meta property="og:url" content="https://delpipi.github.io/wdd231">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
