--- a/week02/prophets.html
+++ b/week02/prophets.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Latter-day prophets</title>
+    <meta name="description" content="Present and give information about  latter-day 
+    prophets their name, their birthday and place their born">
+    <meta name="author" content="Kouame Alexandre Paul">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/prophets.css">
+    <link rel="stylesheet" href="styles/prophets-large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1>Latter-day prophets</h1>
+    </header>
+    <main>
+        <div id="filteredButtons">
+            <!-- <button type="button" data-button="ALL">ALL</button>
+            <button type="button" data-button="ALL">ALL</button> -->
+        </div>
+        <div id="cards">
+            <!-- <section class="card">
+                <div class="card-header">
+                    <h2>Joseph Smith</h2>
+                </div>
+                <div class="card-body">
+                    <p>Date of Birth: 23 December 1905</p>
+                    <p>Place of Birth: Vermont</p>
+                    <img src="https://assets.churchofjesuschrist.org/ec/f8/ecf80a88e31429d0aa0eeec6e2c74851a4bf4235/nauvoo_temple_joseph_art_lds.jpeg"
+                        alt="Prophet Joseph Smith">
+                </div>
+            </section> -->
+        </div>
+    </main>
+    <footer>
+        Kouame Alexandre Paul | Latter-day Prophets
+    </footer>
+    <script src="scripts/prophets.js" async defer></script>
+</body>
+
 </html>
