--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,77 +45,8 @@
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
         </div>
-        <div class="grid" id="businessList">
-            <section class="card">
-                <div class="card-header">
-                    <h2>Invest Usefull Group</h2>
-                </div>
-                <div class="card-body">
-                    <img src="images/logo-invest-usefull.webp" alt="Invest Usefull brand">
-                    <div class="contacts">
-                        <ul>
-                            <li><span>Email: </span>info@investusefull.com</li>
-                            <li><span>Phone: </span>+225 27 48 23 45 96</li>
-                            <li>
-                                <span>Url: </span> <a href="https://www.investusefullgroup.investments/"
-                                    target="_blank">investusefullgroup.investments</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-header">
-                    <h2>West Africa Solutions</h2>
-                </div>
-                <div class="card-body">
-                    <img src="images/logos-was.webp" alt="West Africa Solutions brand">
-                    <div class="contacts">
-                        <ul>
-                            <li><span>Email: </span>info@was-ci.com</li>
-                            <li><span>Phone: </span>+225 27 48 23 45 96</li>
-                            <li>
-                                <span>Url: </span> <a href="https://www.was-ci.com" target="_blank">was-ci.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-header">
-                    <h2>Adc consulting</h2>
-                </div>
-                <div class="card-body">
-                    <img src="images/logo-adc.webp" alt="Adc Consulting brand">
-                    <div class="contacts">
-                        <ul>
-                            <li><span>Email: </span>info@adc-conseil.com</li>
-                            <li><span>Phone: </span>+225 27 48 23 45 96</li>
-                            <li>
-                                <span>Url: </span> <a href="https://www.adc-conseil.com"
-                                    target="_blank">adc-conseil.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-header">
-                    <h2>Kolarel SA</h2>
-                </div>
-                <div class="card-body">
-                    <img src="images/logo-kolarel.webp" alt="Kolarel SA brand">
-                    <div class="contacts">
-                        <ul>
-                            <li><span>Email: </span>info@Kolarel.com</li>
-                            <li><span>Phone: </span>+225 27 48 23 45 96</li>
-                            <li>
-                                <span>Url: </span> <a href="https://www.kolarel.com" target="_blank">kolarel.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
+        <div class="list" id="businessList">
+            <!-- list from directory.js -->
         </div>
     </main>
     <footer>
