update title- completed directory.html

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Côte d'Ivoire Chamber of Commerce</title>
-    <meta name="description" content="Welcome to the Côte d'Ivoire Chamber of Commerce 
-        - your gateway to business growth. Access resources, networking opportunities, 
-        investment insights, and support services to thrive in the Ivorian market">
+    <title>Business Directory</title>
+    <meta name="description" content="Welcome to the Business Directory page where all the business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Côte d'Ivoire Chamber of Commerce">
