updated title- completed directory.html

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Business Directory</title>
-    <meta name="description" content="Welcome to the Business Directory page where all the business are listed">
+    <title>Chamber of Commerce Directory</title>
+    <meta name="description"
+        content="Welcome to the Chamber of Commerce Directory page where all the business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Côte d'Ivoire Chamber of Commerce">
@@ -38,7 +39,7 @@
         <a href="#" id="dark-light"><img src="images/night-mode.png" alt="Night and mode icon"></a>
     </header>
     <main>
-        <h1>Business Directory</h1>
+        <h1>Chamber of Commerce Directory</h1>
         <div class="menu">
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
