--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
         <a href="#" id="dark-light"><img src="images/night-mode.png" alt="Night and mode icon"></a>
     </header>
     <main>
-        <h1>Chamber of Commerce Directory</h1>
+        <h1>Business Directory</h1>
         <div class="menu">
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
