updated week03 assignment - by updaing page description

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chamber of Commerce Directory</title>
-    <meta name="description"
-        content="Welcome to the Chamber of Commerce Directory page where all the business are listed">
+    <meta name="description" content="Welcome to the Cote d'Ivoire Chamber of Commerce Home page where events, 
+        weather data  of Abidjan and Gold or Silver local business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Côte d'Ivoire Chamber of Commerce">
