--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chamber of Commerce Directory</title>
     <meta name="description"
-        content="Welcome to the Chamber of Commerce Directory page where all the business are listed">
+        content="Welcome to the  Cote d'Ivoire Chamber of Commerce Directory page where all the business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Côte d'Ivoire Chamber of Commerce">
