updated project all title to be more meaningfull

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chamber of Commerce Directory</title>
+    <title>Directory | Côte d'Ivire Chamber of Commerce</title>
     <meta name="description"
         content="Welcome to the  Cote d'Ivoire Chamber of Commerce Directory page where all the business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
@@ -39,7 +39,7 @@
         <a href="#" id="dark-light"><img src="images/night-mode.png" alt="Night and mode icon"></a>
     </header>
     <main>
-        <h1>Business Directory</h1>
+        <h1>Directory</h1>
         <div class="menu">
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
