--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chamber of Commerce Directory</title>
+    <title>Home | Côte d'Ivire Chamber of Commerce</title>
     <meta name="description" content="Welcome to the Cote d'Ivoire Chamber of Commerce Home page where events, 
         weather data  of Abidjan and Gold or Silver local business are listed">
     <meta name="author" content="Kouame Alexandre Paul">
