--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Homepage - Kouame Alexandre Paul</title>
-    <meta name="description" content="Welcome to Alexandre's personal website! Discover my work, passions, 
-    and creative projects. Get to know more about my journey, skills, and how I can help bring your ideas to life.">
-    <meta name="author" content="Kouame Alexandre Paul">
-    <meta property="og:title" content="Homepage - Kouame Alexandre Paul">
+    <title>Home | Kouame Alexandre Paul | WDD 231 - Web Frontend Development I</title>
+    <meta name="description" content="WDD 231 - Web Frontend Development I | Home Page">
+    <meta property="og:title" content="Home | Kouame Alexandre Paul | WDD 231 - Web Frontend Development I">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://delpipi.github.io/wdd231/images/abidjan-town.webp">
     <meta property="og:url" content="https://delpipi.github.io/wdd231">
