updated home page to add dialog

--- a/index.html
+++ b/index.html
@@ -71,48 +71,13 @@
         </div>
 
         <div class="block2">
-
             <div id="certicateList"></div>
-
-            <!-- <section class="card">
-                <div class="card-header">
-                    <h2>Web and Computer Programming Certicate</h2>
-                </div>
-                <div class="card-body">
-                    <div class="subject-nav">
-                        <button type="button" class="btn btn-subject">ALL</button>
-                        <button type="button" class="btn btn-subject">CSE</button>
-                        <button type="button" class="btn btn-subject">WDD</button>
-                    </div>
-                    <div class="subject-courses">
-                        <div class="course">
-                            <div class="course-header">
-                                <button type="button" class="btn btn-course">CSE 110</button>
-                            </div>
-                            <div class="course-description">
-                                <h3>Introduction to Programming</h3>
-                                <p class="credit">Credit: <span>2</span></p>
-                                <p class="desc">
-                                    This course will introduce students to programming.
-                                    It will introduce the building blocks of programming
-                                    languages (variables, decisions, calculations, loops,
-                                    array, and input/output) and use them to solve problems.
-                                </p>
-                                <div class="tech">
-                                    <h4>Technologies : </h4>
-                                    <ul>
-                                        <li>Python</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-
         </div>
 
+        <dialog id="dialogBox" class="course-description"></dialog>
+
     </main>
+
     <footer>
         <p>&copy;<span id="currentYear"></span></p>
         <p>Kouame Alexandre Paul - Abidjan, Cote d'Ivoire</p>
