--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Dicovery</a></li>
             </ul>
         </nav>
@@ -127,8 +127,6 @@
         </div>
     </footer>
     <script src="scripts/base.js" async defer></script>
-    <script src="scripts/api.js" type="module"></script>
-    <script src="scripts/utility.js" type="module"></script>
     <script src="scripts/home.js" type="module"></script>
 </body>
 
