completed week04 assignment mobile platform

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,7 +41,7 @@
         <h1>Join Chamber</h1>
         <section class="form card">
             <h3>Join the chamber</h3>
-            <form action="" method="get" class="joinForm">
+            <form action="thankyou.html" method="get" class="joinForm">
                 <label for="firstname">First name *
                     <input type="text" name="firstname" id="firstname" required autocomplete="given-name"
                         title="Your first name">
@@ -86,24 +86,28 @@
         </section>
         <section class="membership-level">
             <div class="card">
-                <p>Non Profit Membership Level</p>
-                <button>Learn more</button>
+                <h3>Non Profit Membership Level</h3>
+                <button id="npLevelButton">Learn more</button>
             </div>
             <div class="card">
-                <p>Bronze Membership Level</p>
-                <button>Learn more</button>
+                <h3>Bronze Membership Level</h3>
+                <button id="bronzeLevelButton">Learn more</button>
             </div>
             <div class="card">
-                <p>Silver Profit Membership Level</p>
-                <button>Learn more</button>
+                <h3>Silver Profit Membership Level</h3>
+                <button id="silverLevelButton">Learn more</button>
             </div>
             <div class="card">
-                <p>Gold Profit Membership Level</p>
-                <button>Learn more</button>
+                <h3>Gold Profit Membership Level</h3>
+                <button id="goldLevelButton">Learn more</button>
             </div>
         </section>
         <dialog id="dialogBox">
-            <p>nn</p>
+            <div>
+                <h3></h3>
+                <button>X</button>
+            </div>
+            <p></p>
         </dialog>
     </main>
     <footer>
