week04 assignment completed

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/thankyou.css">
-
+    <link rel="stylesheet" href="styles/thankyou-large.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,6 +40,7 @@
     <main>
         <h1>Thank you</h1>
         <section class="card">
+            <h2>Thank you, for joining the Chamber of Commerce! We will contact you soon.</h2>
             <div id="result"></div>
         </section>
     </main>
