--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,8 +31,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html">Directory</a></li>
-                <li><a href="join.html" class="active">Join</a></li>
+                <li><a href="directory.html" class="active">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Dicovery</a></li>
             </ul>
         </nav>
