--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,7 +40,7 @@
     <main>
         <h1>Join Chamber</h1>
         <section class="form card">
-            <h3>Join the chamber</h3>
+            <h2>Join the chamber</h2>
             <form action="thankyou.html" method="get" class="joinForm">
                 <label for="firstname">First name *
                     <input type="text" name="firstname" id="firstname" required autocomplete="given-name"
@@ -52,7 +52,7 @@
                 </label>
                 <label for="organizationTitle">Organizational title
                     <input type="text" name="organizationTitle" id="organizationTitle" autocomplete="organization-title"
-                        title="Your organizational title">
+                        title="Only letters, hyphens, and spaces. Minimum 7 characters." pattern="^[A-Za-z\- ]{7,}$">
                 </label>
                 <label for="email">Email Address *
                     <input type="email" name="email" id="email" required autocomplete="email"
@@ -67,7 +67,7 @@
                         autocomplete="organization" title="Your organizational name">
                 </label>
                 <label for="membershipLevel">Select Membership Level
-                    <select name="" id="membershipLevel">
+                    <select name="membershipLevel" id="membershipLevel">
                         <option value="">NP Membership</option>
                         <option value="bronze">Bronze Membership</option>
                         <option value="silver">Silver Membership</option>
@@ -77,7 +77,7 @@
                 <label for="message">Message
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </label>
-                <label for="timestamp">
+                <label>
                     <input type="hidden" name="timestamp" id="timestamp">
                 </label>
 
@@ -104,7 +104,7 @@
         </section>
         <dialog id="dialogBox">
             <div>
-                <h3></h3>
+                <h3>Benefits</h3>
                 <button>X</button>
             </div>
             <p></p>
