--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,10 +33,10 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Dicovery</a></li>
+                <li><a href="discover.html">Dicovery</a></li>
             </ul>
         </nav>
-        <a href="#" id="dark-light"><img src="images/night-mode.png" alt="Night and mode icon"></a>
+        <a href="#" id="dark-light"><img src="images/night-mode.webp" alt="Night and mode icon"></a>
     </header>
     <main>
         <div class="hero">
