--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">Chamber</a></li>
+                <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="https://github.com/Delpipi" target="_blank">Github Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/alexandre-paul-kouame-b700a810b/" target="_blank">LinkedIn</a>
                 </li>
