--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,10 +32,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html" class="active">Join</a></li>
-                <li><a href="#">Dicovery</a></li>
+                <li><a href="discover.html">Dicovery</a></li>
             </ul>
         </nav>
-        <a href="#" id="dark-light"><img src="images/night-mode.png" alt="Night and mode icon"></a>
+        <a href="#" id="dark-light"><img src="images/night-mode.webp" alt="Night and mode icon"></a>
     </header>
     <main>
         <h1>Join Chamber</h1>
@@ -105,8 +105,8 @@
         </section>
         <dialog id="dialogBox">
             <div>
-                <h3>Benefits</h3>
-                <button>X</button>
+                <h3>Visitor</h3>
+                <button type="button">X</button>
             </div>
             <p></p>
         </dialog>
